refactor(indexing): isolate local parsing adapters